--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://knavina2:daWEtAfcCSdoqYkC@cluster0.tpivnp6.mongodb.net/login?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://testloginsignup:DWyo02tAorZ47wOj@clustertestloginsignup.hkphwif.mongodb.net/?retryWrites=true&w=majority&appName=ClusterTestLoginSignup"
 SECRET="secret"
